# manimations

./: .editorconfig  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  test_main.py
src/: constants.py  main.py
src/aggregators/: __init__.py  moving_avg_tracker.py  moving_sum.py
src/components/: __init__.py  bar.py  connection.py  label.py  message.py  processor.py  queue.py  sparkline.py
src/distributions/: scenes.py
src/shared/: constants.py  theme.py  themed_scene.py
src/shared/components/: bar.py  pmf_chart.py  sparkline.py
src/system_design/: connection.py  constants.py  message.py  processor.py  queue.py  scenes.py
tests/: test_main.py
tests/shared/: test_label.py  test_sparkline.py
tests/system_design/: test_processor.py  test_queue.py
